<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEditUserUsername"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/loginUsername"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEditUserPassword"
        android:layout_marginTop="60dp"
       />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/loginPassword"
        android:layout_marginTop="10dp"
       />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/loginPasswordConfirm"
   />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/buttonAddEditUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#67ab9f"
            android:text="@string/buttonEditUser"


            />
    </LinearLayout>


</LinearLayout>