<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="5dp"

        >

        <TextView
            android:id="@+id/textViewItemAmount"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/itemAmount" />

        <TextView
            android:id="@+id/textViewItemDescription"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/itemDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextItemAmount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
             />

        <EditText
            android:id="@+id/editTextItemDescription"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/buttonAddItemSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddItemSave"
            android:background="#67ab9f"/>
    </LinearLayout>

</LinearLayout>